# nocodo

./: .gitignore  .rustfmt.toml  AGENTS.md  BASH_TOOL.md  BASH_TOOL_REVIEW.md  CLAUDE.md  CODEX_ANALYSIS.md  CODEX_CRATES_REUSE.md  CODEX_INDEX.md  CODEX_QUICK_REFERENCE.md  CODEX_SUMMARY.txt  CONTINUE_LLM_E2E_DEBUG.md  Cargo.toml  Claude_API_Messages.md  Claude_Models.md  Claude_Tool_Use.md  DESKTOP_APP_MULTI_SERVER_CONNECTION.md  DEVELOP.md  GEMINI.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPROVE_GREP.md  LIST_FILES_TOOL_UPDATE.md  LLM_CLIENT_REFACTOR.md  LLM_REFACTOR_PROCESS.md  MANAGER_PERMISSION_SYSTEM.md  MIXTURE_OF_AGENTS.md  NOTICE.md  OPENAI.md  OPENAI_FUNCTION_CALLING.md  PLAYBOOK.md  QWEN.md  README.md  ROADMAP.md  SELF_CONTAINED_BINARY.md  TEST_PLAN_ISSUE_133.md  TEST_PROMPT.md  clippy.toml  demo_websocket_fix.sh  deny.toml  (+14 more)
agents/: Cargo.toml  DESIGN.md  MILESTONE_PRAXIS.md  RUNTIME.md
agents/src/: code_writer.rs  config.rs  error.rs  lib.rs  nocodo_description.rs  task_policy.rs  user_input_tool.rs
agents/tests/: rust_engineer_diesel_model_live.rs  rust_engineer_diesel_model_struct_live.rs  rust_engineer_diesel_schema_live.rs
backend/: Cargo.toml
backend/src/: config.rs  db.rs  main.rs
cli/: Cargo.toml
cli/src/: cli.rs  client.rs  error.rs  logging.rs  main.rs
desktop-app/: Cargo.toml  README.md
desktop-app/fonts/: README.md
desktop-app/src/: api_client.rs  app.rs  config.rs  connection_manager.rs  content_renderer.rs  lib.rs  main.rs  ssh.rs  ui_text.rs
desktop-app/ui/: appwindow.slint
manager/: Cargo.toml  build.rs  test-config.toml
manager-runner/: Cargo.toml
manager-runner/src/: main.rs
manager-tools/: Cargo.toml  README.md
manager-tools/examples/: custom_bash_permissions.rs
manager-tools/src/: apply_patch.rs  bash.rs  bash_executor.rs  bash_executor_tests.rs  bash_permissions.rs  bash_permissions_tests.rs  grep.rs  lib.rs  list_files.rs  read_file.rs  tests.rs  tool_error.rs  tool_executor.rs  write_file.rs
manager-tools/tasks/: add-command-restricted-bash-executor.md  add-hackernews-download-manager.md  add-sqlite3-reader-tool.md  sqlite_dual_mode.md
manager-tools/tests/: custom_bash_permissions.rs
manager/bindings/: AiSession.ts  AiSessionOutput.ts  AiSessionResult.ts  ApiKeyConfig.ts  CreateAiSessionRequest.ts  CreateLlmAgentSessionRequest.ts  CreateTerminalSessionRequest.ts  CreateWorkRequest.ts  FileCreateRequest.ts  FileInfo.ts  FileListRequest.ts  FileResponse.ts  GrepMatch.ts  GrepRequest.ts  ListFilesRequest.ts  ListFilesResponse.ts  LlmAgentSession.ts  LlmAgentSessionResponse.ts  MessageContentType.ts  ProjectDetectionResult.ts  ProjectTechnology.ts  ProjectTemplate.ts  ReadFileRequest.ts  ReadFileResponse.ts  RecordAiOutputRequest.ts  SettingsResponse.ts  SupportedModel.ts  SupportedModelsResponse.ts  TemplateFile.ts  TerminalControlMessage.ts  TerminalSession.ts  TerminalSessionResponse.ts  ToolConfig.ts  ToolErrorResponse.ts  ToolRegistryResponse.ts  ToolResponse.ts  WebSocketMessage.ts  Work.ts  WorkMessage.ts  WorkMessageResponse.ts
manager/prompts/: default.toml
manager/src/: auth.rs  bash_executor.rs  bash_executor_tests.rs  bash_permissions.rs  bash_permissions_tests.rs  browser_launcher.rs  command_discovery.rs  config.rs  database.rs  embedded_web.rs  error.rs  git.rs  handlers.rs  lib.rs  llm_agent.rs  llm_client.rs  main.rs  middleware.rs  models.rs  permissions.rs  routes.rs  runner.rs  schema_provider.rs  socket.rs  templates.rs  terminal_runner.rs  tools.rs  websocket.rs
manager/tests/: auth_system.rs  fresh_install_403_test.rs  integration.rs  integration_test.rs  llm_e2e_command_discovery_test.rs  llm_e2e_real_manager_test.rs  llm_e2e_real_test.rs  llm_e2e_simple.rs  llm_validation_only.rs  permission_integration_test.rs  permissions_test.rs  project_api.rs  scan_endpoint_super_admin.rs  simple_real_manager_test.rs
nocodo-agents/: Cargo.toml  README.md
nocodo-agents/src/: config.rs  factory.rs  lib.rs
nocodo-agents/tasks/: add-imap-email-agent.md  add-sqlite-analysis-agent.md  add-structured-json-agent.md  add-tesseract-ocr-agent.md  convert-requirements-gathering-to-tool-calling.md  implement-reflect-mode-for-sqlite-agent.md  implement-tool-execution-flow.md  progress-report.md  refactor-storage-to-trait-based-interface.md  refactor-use-manager-tools.md  sqlite_agent_reflect.md
nocodo-api/: Cargo.toml
nocodo-api/src/: config.rs  lib.rs  main.rs  models.rs
nocodo-api/tasks/: agent-execution-endpoint.md  chat-history-integration-test.md  implement-sqlite-agent-storage.md  integration-test-setup.md
nocodo-api/tests/: agent_execution_test.rs  chat_history_test.rs
nocodo-desktop/: Cargo.toml  DESIGN_SYSTEM.md  DEVELOP.md
nocodo-desktop/src/: main.rs
nocodo-desktop/ui/: appwindow.slint  component-examples.slint  theme.slint  types.slint
nocodo-github-actions/: Cargo.toml  README.md
nocodo-github-actions/bindings/: BranchConfig.ts  CommandExecution.ts  CronSchedule.ts  ExecuteCommandRequest.ts  ExecuteCommandResponse.ts  Job.ts  Runner.ts  ScanWorkflowsRequest.ts  ScanWorkflowsResponse.ts  Step.ts  Trigger.ts  TriggerConfig.ts  Workflow.ts  WorkflowCommand.ts  WorkflowInfo.ts
nocodo-github-actions/src/: cli.rs  error.rs  executor.rs  lib.rs  main.rs  models.rs  nocodo.rs  parser.rs  workflow_tests.rs
nocodo-github-actions/test_workflows/: ci.yml
nocodo-llm-sdk/: .gitignore  Cargo.toml  README.md  TEST_RUNNER.md  test-config.example.toml
nocodo-llm-sdk/docs/: per-model-defaults.md
nocodo-llm-sdk/examples/: gemini_debug.rs  gemini_defaults_test.rs  gemini_flash.rs  gemini_simple.rs  glm_completion.rs  gpt51_codex_responses.rs  grok_completion.rs  openai_completion.rs  provider_comparison.rs  simple_completion.rs  tool_calling_agent.rs  tool_calling_weather.rs  voyage_embeddings.rs  zen_grok_free.rs
nocodo-llm-sdk/src/: client.rs  (+6 more)
nocodo-tools/: Cargo.toml  README.md
nocodo-workflow/: .gitignore  Cargo.toml  README.md  test-config.example.toml
services/: Cargo.toml  MIGRATION_SUMMARY.md  build.rs  services.toml
shared-types/: .gitignore  Cargo.toml
(+832 files in other folders)
