[workspace]
resolver = "2"
members = [
    "manager",
]
exclude = [
    "manager-web"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nocodo team"]
license = "MIT"
repository = "https://github.com/nocodo/nocodo"
