[workspace]
resolver = "2"
members = [
    "manager",
    "shared-types",
    "manager-tools",
    "nocodo-github-actions",
    "nocodo-llm-sdk", "nocodo-agents",
    "nocodo-api",
]
exclude = [
    "manager-web"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
 sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = "7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 config = "0.14"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[workspace.package]
version = "0.1.12"
edition = "2021"
authors = ["nocodo team"]
license = "MIT"
repository = "https://github.com/nocodo/nocodo"

[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2
