[package]
name = "nocodo-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web    = { workspace = true }
llm-sdk      = { path = "../../llm-sdk" }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
schemars     = { version = "0.8", features = ["preserve_order"] }
async-trait  = "0.1"
tokio        = { version = "1.0", features = ["full"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
thiserror    = "1.0"
log          = "0.4"
