[package]
name = "nocodo-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nocodo-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[features]
default = ["db-sqlite"]
db-sqlite = ["dep:rusqlite", "refinery/rusqlite"]
db-postgres = ["dep:postgres", "refinery/postgres"]

[dependencies]
actix-cors = "0.7"
actix-web.workspace = true
refinery = { version = "0.8", default-features = false }
postgres = { version = "0.19", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde.workspace = true
serde_json.workspace = true
shared-types = { path = "../shared-types" }
nocodo-agents = { path = "../agents" }
tokio = { version = "1.0", features = ["sync"] }
log = "0.4"
env_logger = "0.11"
