[package]
name = "nocodo-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nocodo-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "seed-internal-schema"
path = "src/bin/seed_internal_schema.rs"

[features]
default = ["db-sqlite"]
db-sqlite = ["dep:rusqlite", "refinery/rusqlite"]
db-postgres = ["dep:postgres", "refinery/postgres"]

[dependencies]
actix-cors = "0.7"
actix-web.workspace = true
refinery = { version = "0.8", default-features = false }
postgres = { version = "0.19", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"
shared-types = { path = "../shared-types" }
nocodo-agents = { path = "../agents" }
schema-codegen = { path = "../schema-codegen" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "process"] }
gix = { version = "0.83", default-features = false, features = ["sha1", "basic", "worktree-mutation", "async-network-client-async-std"] }
futures-util = "0.3"
rand = "0.8"
resend-rs = { path = "/Users/brainless/Projects/resend-rust" }
log = "0.4"
env_logger = "0.11"
async-std = "1"

