[package]
name = "nocodo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered development assistant CLI with guardrails"

[[bin]]
name = "nocodo"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
walkdir = "2.4"
ignore = "0.4"
serde_yaml = "0.9"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
