[package]
name = "nocodo-desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }

# SSH
russh = "0.40"
russh-keys = "0.40"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Shared Models
manager-models = { path = "../manager-models" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System directories
dirs = "5.0"

# Error handling
thiserror = "1.0"