[package]
name = "nocodo-desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
egui = "0.33.0"
egui_extras = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }

# SSH
russh = "0.54"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Shared Models
manager-models = { path = "../manager-models" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System directories
dirs = "5.0"

# Error handling
thiserror = "1.0"

# SQLite
rusqlite = "0.32"

# Date/Time formatting
chrono = "0.4"


