[package]
name = "nocodo-desktop-app"
version = "0.1.11"
edition = "2021"

[dependencies]
# UI Framework
egui = "0.33.0"
egui_extras = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }

# SSH
russh = "0.54"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Shared Models
manager-models = { path = "../manager-models" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System directories
dirs = "6.0"

# Error handling
thiserror = "2.0"

# SQLite
rusqlite = { version = "0.37", features = ["bundled"] }

# Date/Time formatting
chrono = "0.4"

# Random data generation
rand = "0.8"

# URL encoding
urlencoding = "2.1"

# Cryptography for SSH fingerprint
sha2 = "0.10"
base64 = "0.22"


