[package]
name = "nocodo-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "nocodo Manager daemon for orchestrating AI-assisted development"

[lib]
name = "nocodo_manager"
path = "src/lib.rs"

[[bin]]
name = "nocodo-manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-web = "4.4"
actix-files = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
rusqlite = { version = "0.30", features = ["bundled"] }
config = "0.15"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = "7.1"
home = "0.5"
tokio-stream = { version = "0.1", features = ["net"] }
handlebars = "4.4"
walkdir = "2.5"
portable-pty = "0.8"
base64 = "0.22"
rust-embed = { version = "8.4", features = ["include-exclude"] }
webbrowser = "0.8"
mime_guess = "2.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.9"
tempfile = "3.12"
tokio-test = "0.4"
