[package]
name = "nocodo-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "nocodo Manager daemon for orchestrating AI-assisted development"

[lib]
name = "nocodo_manager"
path = "src/lib.rs"

[[bin]]
name = "nocodo-manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = "0.9"
 anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
 rusqlite = { version = "0.37", features = ["bundled"] }
 config.workspace = true
thiserror = "2.0"

 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
home = "0.5"
tokio-stream = { version = "0.1", features = ["net"] }
handlebars = "6.3"
walkdir = "2.5"

base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
futures-util = "0.3"
grep = "0.4"
regex = "1.10"
codex-apply-patch = { git = "https://github.com/openai/codex", package = "codex-apply-patch" }
nocodo-github-actions = { path = "../nocodo-github-actions", features = ["nocodo-integration"] }
manager-models = { path = "../manager-models" }

[dev-dependencies]
actix-rt = "2.9"
rand = "0.9"
tempfile = "3.12"
tokio-test = "0.4"
