[package]
name = "nocodo-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nocodo-llm-sdk = { path = "../nocodo-llm-sdk" }
nocodo-agents = { path = "../nocodo-agents" }
manager-tools = { path = "../manager-tools" }
shared-types = { path = "../shared-types" }
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true
home = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.9"
config.workspace = true
