[package]
name = "nocodo-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nocodo-llm-sdk = { path = "../nocodo-llm-sdk" }
nocodo-agents = { path = "../nocodo-agents" }
nocodo-tools = { path = "../nocodo-tools" }
shared-types = { path = "../shared-types" }
actix-web.workspace = true
actix-cors = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true
home = "0.5"
dirs.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }
toml = "0.9"
config.workspace = true
async-trait = "0.1"
tempfile = "3"
clap.workspace = true
tracing-appender = "0.2"

[dev-dependencies]
actix-rt = "2"
actix-http = "3"
