[package]
name = "nocodo-llm-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
futures-util = "0.3"
toml = { version = "0.8", optional = true }
schemars = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
mockito = "1.0"
tokio-test = "0.4"

[features]
test-runner = ["toml"]
ffi = []

[[test]]
name = "trait_implementation_tests"
path = "tests/trait_implementation_tests.rs"

[[bin]]
name = "llm-test-runner"
path = "bin/test_runner.rs"
required-features = ["test-runner"]
