[package]
 name = "nocodo-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool execution utilities for nocodo manager"

[lib]
 name = "nocodo_tools"
path = "src/lib.rs"

[[bin]]
name = "hackernews_downloader"
path = "src/bin/hackernews_downloader.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
walkdir = "2.5"
regex = "1.10"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = "0.3"
schemars = "0.8"
codex-apply-patch = { git = "https://github.com/openai/codex", package = "codex-apply-patch", rev = "6951872" }
codex-core = { git = "https://github.com/openai/codex", package = "codex-core", rev = "6951872" }
codex-process-hardening = { git = "https://github.com/openai/codex", package = "codex-process-hardening", rev = "6951872" }
shared-types = { path = "../shared-types" }
rusqlite = { version = "0.37", features = ["bundled"] }
sqlparser = "0.51"
reqwest = { version = "0.12", features = ["json", "charset"] }
home = "0.5"
clap = { workspace = true }
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
imap-proto = "0.16.1"
rustls-connector = "0.19.0"
mail-parser = "0.9"

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"