[package]
name = "nocodo-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nocodo-llm-sdk = { path = "../nocodo-llm-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
toml = { version = "0.8", optional = true }
schemars = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
test-runner = ["toml"]

[[bin]]
name = "test-runner"
path = "bin/test_runner.rs"
required-features = ["test-runner"]
