[package]
name = "nocodo-desktop"
version = "0.1.0"
description = "Nocodo desktop app"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }
tauri-plugin-shell = "2"
serde_json = "1"
libc = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
prod = ["tauri/custom-protocol"]

[workspace]
